# Require autoconf 2.52
AC_PREREQ(2.52)

AC_INIT(GPShell, 1.2.0, snitmo@gmail.com)
AC_CONFIG_AUX_DIR(aux)
AC_COPYRIGHT(COPYING)
AM_INIT_AUTOMAKE([no-define])

# check programs
AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL

# check header files
AC_HEADER_STDC
AC_HEADER_STAT
AC_CHECK_HEADER(stdio.h, , [],
[AC_MSG_ERROR([stdio.h not found.])])
AC_CHECK_HEADER(fcntl.h, , [],
[AC_MSG_ERROR([fcntl.h not found.])])
AC_CHECK_HEADER(io.h, , [],
[AC_MSG_ERROR([io.h not found.])])

# check library functions
AC_FUNC_STAT
AC_FUNC_MALLOC
AC_CHECK_FUNCS(atoi fgets, [],
[AC_MSG_ERROR([Necessary function is not supported.])])

PKG_CHECK_MODULES(PCSCLITE, libpcsclite >= 1.2.9-beta7, [],
        [ if test -f /usr/local/lib/pkgconfig/libpcsclite.pc ; then
                AC_MSG_ERROR([install pkg-config or set PKG_CONFIG_PATH to pkgconfig
directory])
          else
                AC_MSG_WARN([install pcsc-lite 1.2.9-beta7 or later])
          fi
        ])

OLD_CFLAGS="$CFLAGS"
CFLAGS="$CFLAGS $PCSCLITE_CFLAGS"
AC_CHECK_HEADER(winscard.h, [],
        [AC_MSG_ERROR([winscard.h not found or usable, install pcsc-lite 1.2.9-beta7 or
later, or use
CFLAGS=-I<include directory> ./configure])])
CFLAGS="$OLD_CFLAGS"

AC_ARG_ENABLE(debug,
[  --enable-debug          enable debug messages from GPShell application.],
[ case "${enableval}" in
  yes)
    debug=true ;;
  no)
    debug=false ;;
  *) AC_MSG_ERROR([bad value ${enableval} for --enable-debug]) ;;
 esac], [debug=false])

if test x${debug} = xtrue ; then
  AC_DEFINE(DEBUG, 1, [enable full debug messaging.])
fi

OLD_CFLAGS="$CFLAGS"
CFLAGS="$CFLAGS $PCSCLITE_CFLAGS"
AC_CHECK_HEADER(GlobalPlatform/GlobalPlatform.h, [],
[AC_MSG_ERROR([GlobalPlatform/GlobalPlatform.h not found or usable, install GlobalPlatform,
or
use CFLAGS=-I<include directory> ./configure])], )
CFLAGS="$OLD_CFLAGS"

AC_CHECK_LIB(GlobalPlatform, GP211_load, [],
        [AC_MSG_ERROR([GP211_load() not found, install GlobalPlatform])])


AC_MSG_RESULT([Debug output enabled                  : $debug])

AC_OUTPUT([
Makefile
])

