## Process this file with automake to create Makefile.in.

lib_LTLIBRARIES = libJOpenPlatformWrapper.la
include_HEADERS =

libJOpenPlatformWrapper_la_SOURCES = JOpenPlatformWrapper.h JOpenPlatformWrapper.c
libJOpenPlatformWrapper_la_CPPFLAGS = -I$(JAVA_INC) -I$(JAVA_INC_PLATFORM) $(PCSCLITE_CFLAGS)
libJOpenPlatformWrapper_la_LDFLAGS = -version-info 1:0:0


